# motorsport-modeling

./: .gitignore  DATA.md  Dashboard.py  PROJECT_STRUCTURE.md  README.md  dashboard.py  gps_capabilities_breakdown.md  gps_data_availability.md  packages.txt  project_proposal.md  project_tiers.md  pyproject.toml  racing_with_traffic.md  requirements.txt
.streamlit/: config.toml
app/: dashboard.py  streamlit_app.py
data/: README.md  Toyota_Gazoo_Racing_Datasets_Notes_KnownIssues.md  Toyota_Gazoo_Racing_Hackathon_Rules.md  indy_table.csv
docs/: DEMO_QUICK_REFERENCE.md  DEMO_RECOMMENDATIONS.md  DEMO_SCRIPT.md  DEMO_SCRIPT_V2.md  FACT_CHECK_EXECUTIVE_SUMMARY.md  FACT_CHECK_INDEX.md  FACT_CHECK_REPORT.md  FACT_CHECK_SUMMARY.md  RECOMMENDED_NARRATIVE_EXAMPLES.md  SUBMISSION_CHECKLIST.md  architecture.md  dashboard_design.md  hackathon_evaluation.md  hackathon_submission.md  metrics_validation_journey.md  project_story.md  verification_results.json
models/: baseline_lap_predictor.pkl  enhanced_lap_predictor.pkl
pages/: 1_Race_Analytics.py  2_Model_Validation.py  3_Race_Insights.py
scripts/: README.md  analyze_corner_positions.py  audit_all_tracks_data_quality.py  comprehensive_prediction_validation.py  create_sample_data.py  diagnose_corner_detection.py  diagnose_counterfactual_positions.py  diagnose_missing_corners.py  eda_telemetry.py  example_corner_identification.py  find_best_mae.py  find_best_trend_race.py  identify_corners_by_distance.py  identify_corners_final.py  identify_corners_tuned_v2.py  identify_indy_corners.py  identify_indy_corners_brake.py  identify_indy_corners_tuned.py  precompute_all_races.py  precompute_comparatives.py  precompute_counterfactuals.py  precompute_race_analytics.py  prepare_lap_features.py  prepare_multitrack_features.py  regen_failed_counterfactuals.py  regime_aware_prediction.py  test_counterfactual_with_traffic.py  train_lap_predictor.py  train_multitrack_model.py  train_multitrack_model_v2.py  train_multitrack_model_v3.py  train_multitrack_model_v4.py  validate_gps_sample.py  validate_lap_time_predictions.py  validate_metrics_properly.py  (+7 more)
(+178 files in other folders)
