[project]
name = "motorsport-modeling"
version = "0.1.0"
description = "RaceCraft AI - Real-time race simulation and coaching system for motorsport performance analysis"
authors = [
    {name = "RaceCraft AI Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # Machine learning (for GPS corner clustering)
    "scikit-learn>=1.3.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    # Geospatial (for GPS data)
    "shapely>=2.0.0",
    # Progress bars and utilities
    "tqdm>=4.66.0",
    "streamlit>=1.51.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",

    # Code quality (optional, commented for now since user wants uv only)
    # "ruff>=0.1.0",
    # "black>=23.0.0",
    # "mypy>=1.5.0",
]

app = [
    # Dashboard application
    "streamlit>=1.28.0",
    "streamlit-plotly-events>=0.0.6",
]

ml = [
    # Advanced machine learning (for gradient boosting models)
    "xgboost>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/motorsport_modeling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
]
# Coverage options (requires pytest-cov):
# To run with coverage: pytest --cov=motorsport_modeling --cov-report=term-missing --cov-report=html

[tool.coverage.run]
source = ["src/motorsport_modeling"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
